Changes by lidor