@@ -1,108 +1,92 @@
-
 package HR.tests.ServiceTests;
 
-import HR.DTO.DriverInfoDTO;
-import HR.DTO.EmployeeDTO;
-import HR.DTO.RoleDTO;
+import HR.DataAccess.EmployeeDAO;
+import HR.Domain.Employee;
 import HR.Domain.Role;
 import HR.Service.EmployeeService;
+import HR.DTO.EmployeeDTO;
+import HR.DTO.RoleDTO;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 public class EmployeeServiceTest {
 
+    private EmployeeDAO mockEmployeeDAO;
     private EmployeeService employeeService;
 
     @BeforeEach
     public void setUp() {
-        employeeService = EmployeeService.getInstance();
+        mockEmployeeDAO = mock(EmployeeDAO.class);
+        employeeService = new EmployeeService(mockEmployeeDAO); // assuming constructor injection is possible
     }
 
     @Test
-    public void testAddAndGetEmployee() {
-        String id = "12345";
-        List<RoleDTO> roles = List.of(new RoleDTO("Clerk"));
-        EmployeeDTO employeeDTO = new EmployeeDTO(
-                id, "Alice", roles, "IL000111", 4000f, new Date(),
-                Collections.emptyList(), Collections.emptyList(), Collections.emptyList()
-        );
-        employeeService.addEmployee(employeeDTO);
+    public void testAddEmployeeCallsDAO() {
+        RoleDTO roleDto = new RoleDTO("HR");
+        List<RoleDTO> roles = List.of(roleDto);
 
-        EmployeeDTO dto = employeeService.getEmployeeById(id);
+        EmployeeDTO dto = new EmployeeDTO(
+                "E001", "Alice", roles,
+                "IL123456", 5000f,
+                new Date(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>()
+        );
+
+        employeeService.addEmployee(dto);
+
+        ArgumentCaptor<Employee> captor = ArgumentCaptor.forClass(Employee.class);
+        verify(mockEmployeeDAO).insert(captor.capture());
+        assertEquals("Alice", captor.getValue().getName());
+    }
+
+    @Test
+    public void testGetEmployeeByIdReturnsCorrectData() {
+        Role hrRole = new Role("HR");
+        Employee mockEmployee = new Employee("E001", List.of(hrRole), "Alice", "pass", "IL123456", 5000f, new Date());
+
+        when(mockEmployeeDAO.selectById("E001")).thenReturn(mockEmployee);
+
+        EmployeeDTO dto = employeeService.getEmployeeById("E001");
         assertNotNull(dto);
         assertEquals("Alice", dto.getName());
-        assertEquals("IL000111", dto.getBankAccount());
+        assertEquals("IL123456", dto.getBankAccount());
     }
 
     @Test
-    public void testGetAllEmployeesReturnsDTOs() {
-        List<EmployeeDTO> employees = employeeService.getEmployees();
-        assertNotNull(employees);
-        assertTrue(employees.stream().allMatch(e -> e instanceof EmployeeDTO));
+    public void testRemoveEmployeeDelegatesToDAO() {
+        employeeService.removeEmployee("E001");
+        verify(mockEmployeeDAO).delete("E001");
     }
 
     @Test
-    public void testUpdateSalary() {
-        String id = "54321";
-        List<RoleDTO> roles = List.of(new RoleDTO("Tech"));
-        EmployeeDTO employeeDTO = new EmployeeDTO(
-                id, "Bob", roles, "IL222333", 6000f, new Date(),
-                Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-        employeeService.addEmployee(employeeDTO);
-        employeeDTO.setSalary(7500f);
-        employeeService.updateEmployee(employeeDTO);
+    public void testUpdateEmployeeDelegatesToDAO() {
+        RoleDTO roleDto = new RoleDTO("Driver");
+        EmployeeDTO dto = new EmployeeDTO(
+                "E002", "Bob", List.of(roleDto),
+                "BANK2", 6000f,
+                new Date(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>()
+        );
 
-        EmployeeDTO updated = employeeService.getEmployeeById(id);
-        assertEquals(7500f, updated.getSalary());
+        employeeService.updateEmployee(dto);
+        verify(mockEmployeeDAO).update(any(Employee.class));
     }
 
     @Test
-    public void testUpdateBankAccount() {
-        String id = "67890";
-        List<RoleDTO> roles = List.of(new RoleDTO("Driver"));
-        EmployeeDTO employeeDTO = new EmployeeDTO(
-                id, "Dana", roles, "IL555666", 6000f, new Date(),
-                Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-        employeeService.addEmployee(employeeDTO);
-        employeeDTO.setBankAccount("ILNEW123");
-        employeeService.updateEmployee(employeeDTO);
+    public void testGetAllEmployeesReturnsMappedDTOs() {
+        List<Employee> employees = List.of(
+                new Employee("E003", List.of(new Role("Warehouse")), "Tom", "1234", "BANK3", 3500f, new Date())
+        );
 
-        EmployeeDTO updated = employeeService.getEmployeeById(id);
-        assertEquals("ILNEW123", updated.getBankAccount());
-    }
+        when(mockEmployeeDAO.selectAll()).thenReturn(employees);
 
-    @Test
-    public void testRemoveEmployee() {
-        String id = "toRemove";
-        List<RoleDTO> roles = List.of(new RoleDTO("Temp"));
-        EmployeeDTO employeeDTO = new EmployeeDTO(
-                id, "Tom", roles, "BANK1", 3000f, new Date(),
-                Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-        employeeService.addEmployee(employeeDTO);
-        assertNotNull(employeeService.getEmployeeById(id));
-
-        employeeService.removeEmployee(id);
-        assertNull(employeeService.getEmployeeById(id));
-    }
-
-
-    @Test
-    public void testGetNonExistentEmployeeReturnsNull() {
-        assertNull(employeeService.getEmployeeById("nonexistent"));
-    }
-
-    @Test
-    public void testAddEmployeeWithNullValuesDoesNotCrash() {
-        assertDoesNotThrow(() -> {
-            employeeService.addEmployee(new EmployeeDTO("nullID",null, new ArrayList<>(), "NullBank", null, null, null, null, null));
-        });
-
-        EmployeeDTO dto = employeeService.getEmployeeById("nullID");
-        assertNotNull(dto);
-        assertNull(dto.getName());
+        List<EmployeeDTO> result = employeeService.getEmployees();
+        assertEquals(1, result.size());
+        assertEquals("Tom", result.get(0).getName());
     }
 }
